change 4b to Zika seqs from Pardee et al 2016

--- a/clean_figures/fig4/test_green_seqs_thru_original_model.ipynb
+++ b/clean_figures/fig4/test_green_seqs_thru_original_model.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "# import statements \n",
     "import numpy as np\n",
@@ -14,7 +22,8 @@
     "from tensorflow.python.saved_model import tag_constants\n",
     "%matplotlib inline\n",
     "\n",
-    "import keras as keras\n",
+    "#import keras as keras\n",
+    "from tensorflow.python import keras\n",
     "from keras.models import load_model\n",
     "\n",
     "from pysster.One_Hot_Encoder import One_Hot_Encoder\n",
@@ -29,12 +38,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Part 1: Load in sequence data. "
+    "# Part 1: Load in sequence data. \n",
+    "## Change file_name here!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -67,19 +77,19 @@
    "source": [
     "# Load in data\n",
     "data_dir = 'make_tf_learning_models/'\n",
-    "sequence_file = 'Green2014_clean.csv' # data from Green et al 2014\n",
+    "sequence_file = 'Green2014_clean.csv'\n",
     "sequences = pd.read_csv(data_dir + sequence_file,sep=',')\n",
     "print(sequences.head(5))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "seqs = sequences['Toehold sequence']\n",
-    "onoff_vals = sequences['Avg ONOFF'] # this is normalized ON value from Green et al 2014"
+    "onoff_vals = sequences['Avg ONOFF']"
    ]
   },
   {
@@ -91,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -109,6 +119,8 @@
     "alph = list(alph_letters)\n",
     "\n",
     "# one-hot encode\n",
+    "# modified code from Luis to get correct format for TPOT w/ our nt seq\n",
+    "# use pysster (very fast and simple encoding)  \n",
     "one = One_Hot_Encoder(alph_letters)\n",
     "def _get_one_hot_encoding(seq):\n",
     "    one_hot_seq = one.encode(seq)                         \n",
@@ -118,8 +130,8 @@
     "    [_get_one_hot_encoding(s) for s in seqs]).astype(np.float32)\n",
     "nsamples, nx, ny = X.shape # have to flatten the one hot encoded into one dimension\n",
     "\n",
-    "# reformat for CNN if needd\n",
     "print('input shape: ', X.shape)\n",
+    "# reformat for CNN \n",
     "alph_len = len(alph)\n",
     "seq_len = len(seqs[0])\n",
     "X = X.reshape(X.shape[0], seq_len, alph_len).astype('float32')\n",
@@ -128,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -140,8 +152,9 @@
     }
    ],
    "source": [
-    "# reshape target if needed\n",
     "y = np.array(onoff_vals)\n",
+    "\n",
+    "# reshape\n",
     "y = np.transpose(np.array([y]))\n",
     "print('target shape: ', y.shape)"
    ]
@@ -150,14 +163,50 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Part 3. Load in original CNN model trained on Angenent-Mari et al. 2020 data."
+    "# Part 3. Load in original KC onoff model. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From /anaconda2/envs/clean_toehold_venv/lib/python3.7/site-packages/keras/backend/tensorflow_backend.py:541: The name tf.placeholder is deprecated. Please use tf.compat.v1.placeholder instead.\n",
+      "\n",
+      "WARNING:tensorflow:From /anaconda2/envs/clean_toehold_venv/lib/python3.7/site-packages/keras/backend/tensorflow_backend.py:4432: The name tf.random_uniform is deprecated. Please use tf.random.uniform instead.\n",
+      "\n",
+      "WARNING:tensorflow:From /anaconda2/envs/clean_toehold_venv/lib/python3.7/site-packages/keras/backend/tensorflow_backend.py:66: The name tf.get_default_graph is deprecated. Please use tf.compat.v1.get_default_graph instead.\n",
+      "\n",
+      "WARNING:tensorflow:From /anaconda2/envs/clean_toehold_venv/lib/python3.7/site-packages/keras/backend/tensorflow_backend.py:148: The name tf.placeholder_with_default is deprecated. Please use tf.compat.v1.placeholder_with_default instead.\n",
+      "\n",
+      "WARNING:tensorflow:From /anaconda2/envs/clean_toehold_venv/lib/python3.7/site-packages/keras/backend/tensorflow_backend.py:3733: calling dropout (from tensorflow.python.ops.nn_ops) with keep_prob is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Please use `rate` instead of `keep_prob`. Rate should be set to `rate = 1 - keep_prob`.\n",
+      "WARNING:tensorflow:From /anaconda2/envs/clean_toehold_venv/lib/python3.7/site-packages/keras/backend/tensorflow_backend.py:190: The name tf.get_default_session is deprecated. Please use tf.compat.v1.get_default_session instead.\n",
+      "\n",
+      "WARNING:tensorflow:From /anaconda2/envs/clean_toehold_venv/lib/python3.7/site-packages/keras/backend/tensorflow_backend.py:197: The name tf.ConfigProto is deprecated. Please use tf.compat.v1.ConfigProto instead.\n",
+      "\n",
+      "WARNING:tensorflow:From /anaconda2/envs/clean_toehold_venv/lib/python3.7/site-packages/keras/backend/tensorflow_backend.py:203: The name tf.Session is deprecated. Please use tf.compat.v1.Session instead.\n",
+      "\n",
+      "WARNING:tensorflow:From /anaconda2/envs/clean_toehold_venv/lib/python3.7/site-packages/keras/backend/tensorflow_backend.py:207: The name tf.global_variables is deprecated. Please use tf.compat.v1.global_variables instead.\n",
+      "\n",
+      "WARNING:tensorflow:From /anaconda2/envs/clean_toehold_venv/lib/python3.7/site-packages/keras/backend/tensorflow_backend.py:216: The name tf.is_variable_initialized is deprecated. Please use tf.compat.v1.is_variable_initialized instead.\n",
+      "\n",
+      "WARNING:tensorflow:From /anaconda2/envs/clean_toehold_venv/lib/python3.7/site-packages/keras/backend/tensorflow_backend.py:223: The name tf.variables_initializer is deprecated. Please use tf.compat.v1.variables_initializer instead.\n",
+      "\n",
+      "WARNING:tensorflow:From /anaconda2/envs/clean_toehold_venv/lib/python3.7/site-packages/keras/optimizers.py:793: The name tf.train.Optimizer is deprecated. Please use tf.compat.v1.train.Optimizer instead.\n",
+      "\n",
+      "WARNING:tensorflow:From /anaconda2/envs/clean_toehold_venv/lib/python3.7/site-packages/keras/backend/tensorflow_backend.py:1033: The name tf.assign_add is deprecated. Please use tf.compat.v1.assign_add instead.\n",
+      "\n",
+      "WARNING:tensorflow:From /anaconda2/envs/clean_toehold_venv/lib/python3.7/site-packages/keras/backend/tensorflow_backend.py:1020: The name tf.assign is deprecated. Please use tf.compat.v1.assign instead.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "model_dir = 'models/'\n",
     "final_model_path = model_dir + 'onoff_original_model.h5'\n",
@@ -168,9 +217,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From /anaconda2/envs/clean_toehold_venv/lib/python3.7/site-packages/keras/backend/tensorflow_backend.py:107: The name tf.reset_default_graph is deprecated. Please use tf.compat.v1.reset_default_graph instead.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "predictions = model.predict(X)\n",
     "on_preds = predictions\n",
@@ -182,104 +240,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Part 4. Load in model trained on only Green et al. 2014 data."
+    "# Part 4. Look at results"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "final_model_path = model_dir + 'only_green_trained_model.h5'\n",
-    "final_weights_path = model_dir + 'only_green_trained_model_weights.h5'\n",
-    "model = load_model(final_model_path)\n",
-    "model.load_weights(final_weights_path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "predictions = model.predict(X)\n",
-    "on_preds = predictions\n",
-    "sequences['green_onoff_preds'] = np.reshape(on_preds, [len(seqs),])\n",
-    "K.clear_session()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Part 5. Load in transfer learning model initialized with Angenent-Mari weights."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "final_model_path = model_dir + 'initialization_weights_tf_onoff_model.h5'\n",
-    "final_weights_path = model_dir + 'initialization_weights_tf_onoff_model_weights.h5'\n",
-    "model = load_model(final_model_path)\n",
-    "model.load_weights(final_weights_path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "predictions = model.predict(X)\n",
-    "on_preds = predictions\n",
-    "sequences['weight_initialization_onoff_preds'] = np.reshape(on_preds, [len(seqs),])\n",
-    "K.clear_session()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Part 6. Load in transfer learning model with Angenent-Mari weights frozen in the CNN layers."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "final_model_path = model_dir + 'freeze_weights_tf_onoff_model.h5'\n",
-    "final_weights_path = model_dir + 'freeze_weights_tf_onoff_model_weights.h5'\n",
-    "model = load_model(final_model_path)\n",
-    "model.load_weights(final_weights_path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "predictions = model.predict(X)\n",
-    "on_preds = predictions\n",
-    "sequences['layer_freeze_onoff_preds'] = np.reshape(on_preds, [len(seqs),])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Part 7. Look at results"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -312,9 +278,6 @@
        "      <th>sdev ONOFF</th>\n",
        "      <th>Toehold Rating</th>\n",
        "      <th>simple_onoff_original_kc_preds</th>\n",
-       "      <th>green_onoff_preds</th>\n",
-       "      <th>weight_initialization_onoff_preds</th>\n",
-       "      <th>layer_freeze_onoff_preds</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -329,9 +292,6 @@
        "      <td>2.2</td>\n",
        "      <td>Bad</td>\n",
        "      <td>0.241781</td>\n",
-       "      <td>0.018677</td>\n",
-       "      <td>0.103607</td>\n",
-       "      <td>0.049510</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -344,9 +304,6 @@
        "      <td>1.1</td>\n",
        "      <td>Bad</td>\n",
        "      <td>0.105242</td>\n",
-       "      <td>0.060443</td>\n",
-       "      <td>0.144504</td>\n",
-       "      <td>0.092114</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -359,9 +316,6 @@
        "      <td>1.5</td>\n",
        "      <td>Bad</td>\n",
        "      <td>0.494880</td>\n",
-       "      <td>-0.024859</td>\n",
-       "      <td>0.099984</td>\n",
-       "      <td>0.068302</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -374,9 +328,6 @@
        "      <td>1.1</td>\n",
        "      <td>Bad</td>\n",
        "      <td>0.404838</td>\n",
-       "      <td>-0.003045</td>\n",
-       "      <td>0.109763</td>\n",
-       "      <td>0.033609</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -389,9 +340,6 @@
        "      <td>1.4</td>\n",
        "      <td>Bad</td>\n",
        "      <td>0.695428</td>\n",
-       "      <td>-0.005056</td>\n",
-       "      <td>0.065643</td>\n",
-       "      <td>0.029860</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -412,29 +360,15 @@
        "3  TAAGTAAATGAAAGTGTATGTATGTTGCTG  CAGCAACATACATACACTTTCATTTACTTA        8.7   \n",
        "4  TCAATAAGGCGGAGTTCGTCGAGGTGCCTG  CAGGCACCTCGACGAACTCCGCCTTATTGA        8.5   \n",
        "\n",
-       "   sdev ONOFF Toehold Rating  simple_onoff_original_kc_preds  \\\n",
-       "0         2.2            Bad                        0.241781   \n",
-       "1         1.1            Bad                        0.105242   \n",
-       "2         1.5            Bad                        0.494880   \n",
-       "3         1.1            Bad                        0.404838   \n",
-       "4         1.4            Bad                        0.695428   \n",
-       "\n",
-       "   green_onoff_preds  weight_initialization_onoff_preds  \\\n",
-       "0           0.018677                           0.103607   \n",
-       "1           0.060443                           0.144504   \n",
-       "2          -0.024859                           0.099984   \n",
-       "3          -0.003045                           0.109763   \n",
-       "4          -0.005056                           0.065643   \n",
-       "\n",
-       "   layer_freeze_onoff_preds  \n",
-       "0                  0.049510  \n",
-       "1                  0.092114  \n",
-       "2                  0.068302  \n",
-       "3                  0.033609  \n",
-       "4                  0.029860  "
+       "   sdev ONOFF Toehold Rating  simple_onoff_original_kc_preds  \n",
+       "0         2.2            Bad                        0.241781  \n",
+       "1         1.1            Bad                        0.105242  \n",
+       "2         1.5            Bad                        0.494880  \n",
+       "3         1.1            Bad                        0.404838  \n",
+       "4         1.4            Bad                        0.695428  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -445,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,25 +399,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R2:  0.00018705497816400357\n",
-      "Pearson:  -0.013676804384212109\n",
-      "Spearman:  -0.03460180027775038\n",
-      "R2:  0.7275583582304104\n",
-      "Pearson:  0.8529703149760901\n",
-      "Spearman:  0.6877042949764046\n",
-      "R2:  0.3606370845251086\n",
-      "Pearson:  0.6005306690961825\n",
-      "Spearman:  0.4979948599020488\n",
-      "R2:  0.594702915739662\n",
-      "Pearson:  0.7711698358595609\n",
-      "Spearman:  0.6386292916932552\n"
+      "R2:  0.0001870542615070489\n",
+      "Pearson:  -0.013676778184464677\n",
+      "Spearman:  -0.03460180027775038\n"
      ]
     }
    ],
@@ -492,15 +417,12 @@
     "onoff_vals = preprocessing.MinMaxScaler().fit_transform(onoff_vals.reshape(-1, 1))\n",
     "onoff_vals = onoff_vals.flatten()\n",
     "\n",
-    "onoff_original_metrics = compute_metrics(sequences['simple_onoff_original_kc_preds'], onoff_vals)\n",
-    "green_metrics = compute_metrics(sequences['green_onoff_preds'], onoff_vals)\n",
-    "tf_init_metrics = compute_metrics(sequences['weight_initialization_onoff_preds'], onoff_vals)\n",
-    "tf_weight_mettrics = compute_metrics(sequences['layer_freeze_onoff_preds'], onoff_vals)"
+    "onoff_original_metrics = compute_metrics(sequences['simple_onoff_original_kc_preds'], onoff_vals)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -538,59 +460,25 @@
        "      <td>-0.034602</td>\n",
        "      <td>onoff_original</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0.727558</td>\n",
-       "      <td>0.852970</td>\n",
-       "      <td>0.687704</td>\n",
-       "      <td>just_green</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0.360637</td>\n",
-       "      <td>0.600531</td>\n",
-       "      <td>0.497995</td>\n",
-       "      <td>tf_initialization</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0.594703</td>\n",
-       "      <td>0.771170</td>\n",
-       "      <td>0.638629</td>\n",
-       "      <td>tf_freeze_weights</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         r2   pearson  spearman              model\n",
-       "0  0.000187 -0.013677 -0.034602     onoff_original\n",
-       "1  0.727558  0.852970  0.687704         just_green\n",
-       "2  0.360637  0.600531  0.497995  tf_initialization\n",
-       "3  0.594703  0.771170  0.638629  tf_freeze_weights"
+       "         r2   pearson  spearman           model\n",
+       "0  0.000187 -0.013677 -0.034602  onoff_original"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tf_matrix = pd.DataFrame([onoff_original_metrics, green_metrics, tf_init_metrics, tf_weight_mettrics])\n",
+    "tf_matrix = pd.DataFrame([onoff_original_metrics])\n",
     "tf_matrix.columns = ['r2', 'pearson', 'spearman']\n",
-    "tf_matrix['model'] = ['onoff_original', 'just_green', 'tf_initialization', 'tf_freeze_weights']\n",
+    "tf_matrix['model'] = ['onoff_original']\n",
     "tf_matrix"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "out_dir = 'data/'\n",
-    "tf_matrix.to_csv(out_dir + '4b_tf_learning_metrics.csv')"
    ]
   },
   {
@@ -603,9 +491,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "clean_toehold_venv",
    "language": "python",
-   "name": "python3"
+   "name": "clean_toehold_venv"
   },
   "language_info": {
    "codemirror_mode": {
@@ -617,7 +505,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
